# FusionXR

./: CMakeLists.txt  Edittime.cpp  Ext.aps  Ext.def  Ext.rc  FusionXR.cpp  FusionXR.h  General.cpp  Main.cpp  Main.h  RCb12912  Resource.h  Runtime.cpp  Template.sln  Template.vcxproj  Template.vcxproj.filters  UpgradeLog.htm  ext icon hires.psd  ext icon.psd  openxr-gfxwrapper.lib
CMake/: FindOpenXR.cmake
Debug/: Ext.res  Template.dll.recipe  Template.exp  Template.lib  Template.mfx  Template_original.mfx  copyExt.bat  mmf2u.exe - Shortcut.lnk  vc143.idb
Debug/Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Template.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
gfxwrapper/: gfxwrapper_opengl.h
sdk-files/: check.h  common.h  xr_linear.h
